<resources>
    <string name="app_name">PokeMe</string>
    <string name="poke_placeholder">Write your poke message here</string>
    <string name="poke_user_button_text">Poke user</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Password repeat</string>
    <string name="create_account">Create account</string>
    <string name="create_account_title">Регистрация</string>
    <string name="search_friends">Search friends</string>
    <string name="friend_photo">friend_photo</string>
    <string name="friend_name">Friend name</string>
    <string name="login_account_title">Войти в аккаунт</string>
    <string name="registerTabItem">register</string>
    <string name="loginTabItem">loginTabItem</string>
    <string name="friends_item_title">Friends</string>
    <string name="pokes_menu_item">Pokes</string>
    <string name="profile_menu_item">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="logout">Logout</string>
    <string name="auth_invalid">Проверьте введенные данные</string>
    <string name="user_doesnot_exist">Пользователя не существует</string>
    <string name="change_account_info">Change account info</string>
</resources>